# Learning-Notebook

./: README.md
Algorithm/Machine-Learning/data/Ch06/: digits.zip:Zone.Identifier
Algorithm/algorithm/: .gitignore  README.md  pyproject.toml  基本数据结构.ipynb
DataBase/learning-solr/: .gitignore  README.md
DevOps/: README.md  环境安装.md
DevOps/docker-demo/: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
DevOps/docker-demo/app/: main.py
DevOps/docker-demo/devops/: Dockerfile  docker-compose.yml  nginx.conf
DevOps/docker-demo/devops/k8s/: fast-api-server-deployment.yaml  fast-api-server-service.yaml
DevOps/docker-demo/fast_app/: create_app.py
DevOps/docker-demo/fast_app/api/: redis_api.py
DevOps/docker-demo/tests/app/: test_hello_world.py
DevOps/learning-aws/: .gitignore  README.md  pyproject.toml
DevOps/learning-aws/devops/: docker-compose.yml
DevOps/learning-k8s/: README.md
DevOps/learning-k8s/backend-demo/: fast-api-server-deployment.yaml  nginx-deployment.yaml  nginx.conf
Software Engineering/: README.md
UE5/: Component.md  Practical.md
