[tool.poetry]
name = "algorithm"
version = "0.1.0"
description = ""
authors = ["Neo <roohan.lee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
notebook = "6.4.12"
traitlets = "5.9.0"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
