[tool.poetry]
name = "learning-aws"
version = "0.1.0"
description = "with localstack"
authors = ["Neo <roohan.lee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
localstack = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
